[gd_scene load_steps=9 format=3 uid="uid://bqgpojlp0hah7"]

[ext_resource type="Script" path="res://Slime.gd" id="1_0iphj"]
[ext_resource type="Texture2D" uid="uid://b4ka8qkuott6k" path="res://assets/Mobs/Sprite-slimer.png" id="1_lh0wp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_84dxa"]
atlas = ExtResource("1_lh0wp")
region = Rect2(0, 37, 16, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2rj2"]
atlas = ExtResource("1_lh0wp")
region = Rect2(80, 37, 16, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_huq0t"]
atlas = ExtResource("1_lh0wp")
region = Rect2(128, 37, 16, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdsds"]
atlas = ExtResource("1_lh0wp")
region = Rect2(64, 37, 16, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wqij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84dxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2rj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huq0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdsds")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_be7q7"]
radius = 4.90574

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_0iphj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7wqij")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.0234108, 1.4749)
shape = SubResource("CircleShape2D_be7q7")

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0.0234108, 1.4749)
shape = SubResource("CircleShape2D_be7q7")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
